--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(77, 255, 0);
+    background-color: rgb(82, 170, 31);
     color: white;
 }
 #nav:hover{
@@ -38,4 +38,7 @@ body {
     justify-content: space-around;
     background-color: rgb(255, 0, 21);
     color: white;
+}
+.contact{
+    background-color: rgb(0, 255, 149);
 }
