--- a/style.css
+++ b/style.css
@@ -45,4 +45,4 @@ body {
 #img1{
     width: 100%;
     height: 70%;
-}
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;}
