--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 .icone{
     width: 10%;
@@ -20,9 +21,12 @@ body {
     text-align: center;
     margin-top: 20px;
 }
-
+.titre{
+    font-size: 15px;
+ }
 .d-block{
     width: 20%;
+    height: auto;
 }
 #login{
     background-color: rgb(204, 211, 211);
@@ -39,28 +43,60 @@ body {
     display: flex;
     gap: 15%;
     justify-content: space-around;
-    background-color: rgb(255, 0, 21);
+    background-color: rgb(189, 180, 181);
     color: white;
 }
 .contact{
-    background-color: rgb(0, 255, 149);
+    background-color: rgb(189, 180, 181);
 }
 #img1{
     width: 100%;
-    height: 70%;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;}
+    height: 80%;
+}
 
  /* ---------------------------------------hover------------------------------------------------- */
 
     #card{
         transition: all 0.5s ease;
+        
     }
-    #card:hover{
-        cursor: pointer;
-        box-shadow: 0.5rem 1rem rgba(0, 0, 0, .15);
-        transform: scale(1.1);
+   
+    #acc{
+        height: 100%;
     }
     #acuie{
         background-image: url(img/bga.jpeg);
         background-size: cover;
     }
+     .card-img-top{
+        
+    } 
+
+    /* ------------------------------------port----------------------------- */
+    .Portfolio_wrapper .card{
+        height: 100%;
+        min-height: 350px;
+        overflow: hidden;
+        border: 1px solid var(--bg-white);
+        cursor: pointer;
+        box-shadow: 0 0 16px 4px  var(--bg-dark-blue);
+      }
+      .Portfolio_wrapper .card span{
+        transition:background-position 4s ease-in-out 0s;
+        width: 100%;
+        height: 100%;
+        background-position: top center;
+        background-size: cover;
+      }
+      .Portfolio_wrapper .card:hover span{
+        background-position: bottom center;
+      
+      }
+
+      /* portfolio */
+.Portfolio_wrapper .card{
+    min-height: 300px;
+}
+#tec{
+    background-image: url(img/bga.jpeg);
+}
