--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(82, 170, 31);
+    background-color: rgb(189, 180, 181);
     color: white;
 }
 #nav:hover{
     display: flex;
     gap: 15%;
     justify-content: space-around;
-    background-color: rgb(189, 180, 181);
+    background-color: black;
     color: white;
 }
 .contact,
@@ -55,9 +55,7 @@ body {
     height: 80%;
 }
 .card:hover{
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    background-color: rgb(82, 170, 31);
-}
+    background-color: rgb(189, 180, 181);}
 #text-hover:hover{
    
    background-color: white;
@@ -67,7 +65,6 @@ body {
 
     #card{
         transition: all 0.5s ease;
-        
     }
    
     #acc{
@@ -77,9 +74,7 @@ body {
         background-image: url(img/bga.jpeg);
         background-size: cover;
     }
-     .card-img-top{
-        
-    } 
+    
 
     /* ------------------------------------port----------------------------- */
     .Portfolio_wrapper .card{
